--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -387,6 +387,6 @@ Mejor Torrent]
 | 0.4
 | 25/Nov<br />2019
 | [https://raw.githubusercontent.com/CravateRouge/qBittorrentSearchPlugins/master/yggtorrent.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br /> [https://github.com/CravateRouge/qBittorrentSearchPlugins/blob/master/README.md [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
-| ❗ Working when DDOS cloudfare protection is disabled
+| ❗ Working when DDOS cloudfare<br />protection is disabled
 |}
 ''*All files'' is a tarball (.tar.gz) containing script, icon, README & INSTALL files.
