--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -209,7 +209,7 @@ Mejor Torrent]
 | 1.1
 | 02/Jan<br />2021
 | [https://raw.githubusercontent.com/imDMG/qBt_SE/master/rutor.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br /> [https://github.com/imDMG/qBt_SE/blob/master/README.md#rutrackerorg [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
-| ✔ qbt 4.0.x / python 3.5.0 <br />❗ qbt 4.1.3 (no result)
+| ✔ qbt 4.2.x / python 3.6.0+
 |-
 | [[https://www.google.com/s2/favicons?domain=skytorrents.lol#.png]] [https://www.skytorrents.lol/ SkyTorrents]
 | [https://gist.github.com/kernc/67c939c57edb7dd057b3abf9f159598a kernc]
