--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -354,10 +354,10 @@ Mejor Torrent]
 | [https://raw.githubusercontent.com/bugsbringer/qbit-plugins/master/lostfilm.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br /> [https://github.com/bugsbringer/qbit-plugins/blob/master/README.md [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
 | ✔ qbt 4.2.x / python 3.5.0
 |-
-| [[https://raw.githubusercontent.com/darktohka/qbittorrent-plugins/master/resources/ncore.png]] [https://ncore.cc/ nCore]
+| [[https://raw.githubusercontent.com/darktohka/qbittorrent-plugins/master/resources/ncore.png]] [https://ncore.pro/ nCore]
 | [https://github.com/darktohka/qbittorrent-plugins darktohka]
-| 1.2
-| 26/Mar<br />2020
+| 1.3
+| 16/Feb<br />2021
 | [https://raw.githubusercontent.com/darktohka/qbittorrent-plugins/master/ncore.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br /> [https://github.com/darktohka/qbittorrent-plugins/blob/master/README.md [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
 | ✔ qbt 4.1.x / python 3.6+
 |-
