--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -90,9 +90,9 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 | [[https://github.com/iordic/qbittorrent-search-plugins/raw/master/engines/elitetorrent.png]] [https://www.elitetorrent.com/ Elitetorrent]
 | [https://github.com/iordic/qbittorrent-search-plugins iordic]
 | 1.3
-| 22/Oct<br />2020
+| 04/Mar<br />2021
 | [https://raw.githubusercontent.com/iordic/qbittorrent-search-plugins/master/engines/elitetorrent.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
-|  ✖ Not Working
+|  ✔ qbt 4.1.x / python 3.8.5
 |-
 | [[https://github.com/MaurizioRicci/qBittorrent_search_engine/blob/master/ettv_icon.png]] [https://www.ettv.tv/ ETTV]
 | [https://github.com/MaurizioRicci/qBittorrent_search_engine/ mauricci]
