--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -51,6 +51,13 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 | [https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/anidex.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | ✔ qbt 4.1.x / python 3.5.0
 |-
+| [[https://i.imgur.com/SC3yDH5.png]] [https://bt4g.org/ b4tg]
+| [https://github.com/kjjejones42/b4tg_search_plugin kjjejones42]
+| 1.00
+| 01/Apr<br />2021
+| [https://raw.githubusercontent.com/kjjejones42/b4tg_search_plugin/master/bt4g.py?token=ALEV33PW47UB23O2YW3VBZTAMX5II [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
+| ✔ qbt 4.1.x / python 3.5.0
+|-
 | [[https://github.com/Pireo/hello-world/blob/master/etree.png]] [http://bt.etree.org/ bt.etree.org]
 | [https://github.com/lima66/Torrents_Plugin/ lima66]
 | 1.00
