--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -30,7 +30,7 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 | ✔ qbt v4.2.x / python 3.5.0
 |-
 |-
-|[[https://github.com/Pireo/hello-world/blob/master/MA_Icon_Graduation.png]] [http://academictorrents.com/ Academic Torrents]
+|[[https://raw.githubusercontent.com/libellula/Official-search-engines-plugins-favicons/main/academictorrents%20favicon.ico]] [http://academictorrents.com/ Academic Torrents]
 |[https://github.com/solenskiner/search-plugins solenskiner]
 |0.3
 |15/Jan<br />2018
