--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -105,7 +105,7 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 | 1.3
 | 04/Mar<br />2021
 | [https://raw.githubusercontent.com/iordic/qbittorrent-search-plugins/master/engines/elitetorrent.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
-|  ✔ qbt 4.1.x / python 3.8.5
+|  ✖ Not Working
 |-
 | [[https://github.com/MaurizioRicci/qBittorrent_search_engine/blob/master/ettv_icon.png]] [https://www.ettv.tv/ ETTV]
 | [https://github.com/LightDestory/qBittorrent-Search-Plugins LightDestory]
