Added Solid torrents search engine plugin

--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -259,6 +259,14 @@ Mejor Torrent]
 |[https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/snowfl.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 |✔ qbt 4.3.x / python 3.8.5 <br />**READ REPOSITORY NOTES**
 |-
+|-
+|[[https://raw.githubusercontent.com/nklido/qBittorrent_search_engines/master/solidtorrents_icon_16x16.png]] [https://solidtorrents.eu Solid Torrents]
+|[https://github.com/nklido/qBittorrent_search_engines nKlido]
+|1.0
+|27/Oct<br />2021
+|[https://raw.githubusercontent.com/nklido/qBittorrent_search_engines/master/solidtorrents.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
+|✔ qbt 4.3.x / python 3.8.10 <br />
+|-
 | [[https://github.com/libellula/qbt-plugins/blob/main/subtorrentsfavicon.png]]
 [https://www.subtorrents.la SubTorrents]
 | [https://github.com/joseeloren/qbittorrent-search-plugins joseeloren]
