--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -436,7 +436,7 @@ Mejor Torrent]
 | 2.1.9
 | 20/Apr<br />2022
 | [https://raw.githubusercontent.com/nbusseneau/qBittorrent-rutracker-plugin/master/rutracker.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br />[https://github.com/nbusseneau/qBittorrent-rutracker-plugin/blob/master/README.md [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
-| ✔ qbt 4.4.x / python 3.9.x
+| ✔ qbt 4.4.x / python 3.9.x<br/>❗ Working when DDOS cloudfare<br />protection is disabled
 |-
 | [[https://raw.githubusercontent.com/swannie-eire/prowlarr-qbittorrent-plugins/main/prowlarr-logo-lq.png]] [https://github.com/Prowlarr/Prowlarr Prowlarr]
 | [https://github.com/swannie-eire/prowlarr-qbittorrent-plugins swannie-eire]
