--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -31,8 +31,8 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 |-
 |[[https://github.com/libellula/Official-search-engines-plugins-favicons/blob/main/academictorrentsfavicon-16x16.png]] [https://academictorrents.com/ Academic Torrents]
 |[https://github.com/LightDestory/qBittorrent-Search-Plugins LightDestory]
-|1.0
-|17/Jun<br />2021
+|1.1
+|01/May<br />2022
 |[https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/academictorrents.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 |✔ qbt 4.3.x / python 3.8.5 <br />**READ REPOSITORY NOTES**
 |-
@@ -130,8 +130,8 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 |-
 | [[https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/glotorrents.png]] [https://glodls.to/  GloTorrents]
 | [https://github.com/LightDestory/qBittorrent-Search-Plugins LightDestory]
-| 1.3
-| 05/Dec<br />2021
+| 1.5
+| 28/Jul<br />2022
 | [https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/glotorrents.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | ✔ qbt 4.3.5 / python 3.8.5
 |-
@@ -148,6 +148,13 @@ The plugins shown as ✖ or ❗ will result in the slowdown and malfunction of o
 | 23/Apr<br />2019
 | [https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engine/master/kickass_torrent.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | ✔ qbt 4.1.x / python 3.5.0
+|-
+| [[https://github.com/LightDestory/qBittorrent-Search-Plugins/raw/master/src/engines/kickasstorrents.png]] [https://katcr.to/  Kickass Torrent]
+| [https://github.com/LightDestory/qBittorrent-Search-Plugins LightDestory]
+| 1.0
+| 28/Jul<br />2022
+| [https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/kickasstorrents.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
+| ✔ qbt 4.3.x / python 3.8.5
 |-
 | [[https://github.com/libellula/qbt-plugins/blob/main/ltfavicon-16x16.png]] [http://linuxtracker.org/ Linux Tracker]
 | [https://github.com/MadeOfMagicAndWires/qBit-plugins Made Of Magic<br />And Wires]
@@ -178,6 +185,13 @@ Mejor Torrent]
 | 02/Jan<br />2021
 | [https://raw.githubusercontent.com/libellula/qbt-plugins/main/mejor.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | ✔ qbt 4.1.x / python 3.5.0 <br />(no s/l and results not clickable)
+|-
+| [[https://github.com/LightDestory/qBittorrent-Search-Plugins/raw/master/src/engines/nitro.png]] [https://nitro.to/  Nitro.to]
+| [https://github.com/LightDestory/qBittorrent-Search-Plugins LightDestory]
+| 1.0
+| 29/Jul<br />2022
+| [https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/nitro.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
+| ✔ qbt 4.3.x / python 3.8.5
 |-
 | [[https://raw.githubusercontent.com/4chenz/pantsu-plugin/master/pantsu.png]] [https://nyaa.pantsu.cat/ Nyaa.Pantsu]
 | [https://github.com/4chenz/pantsu-plugin/ 4chenz]
@@ -231,6 +245,13 @@ Mejor Torrent]
 | [https://raw.githubusercontent.com/joseeloren/search-plugins/master/nova3/engines/pctreload.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | ✔ qbt 4.3.x / python 3.5.0
 |-
+| [[https://github.com/LightDestory/qBittorrent-Search-Plugins/raw/master/src/engines/pirateiro.png]] [https://pirateiro.com/  Pirateiro]
+| [https://github.com/LightDestory/qBittorrent-Search-Plugins LightDestory]
+| 1.0
+| 28/Jul<br />2022
+| [https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/pirateiro.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
+| ✔ qbt 4.3.x / python 3.8.5
+|-
 | [[https://github.com/LightDestory/qBittorrent-Search-Plugins/blob/master/src/engines/rarbg.png]] [http://www.rarbg.is/ RARBG]
 | [https://github.com/LightDestory/qBittorrent-Search-Plugins LightDestory]
 | 1.0
@@ -268,11 +289,10 @@ Mejor Torrent]
 |-
 |[[https://github.com/libellula/qbt-plugins/blob/main/snfavicon-16x16.png]] [https://snowfl.com Snowfl]
 |[https://github.com/LightDestory/qBittorrent-Search-Plugins LightDestory]
-|1.0
-|17/Jun<br />2021
+|1.3
+|28/Jul<br />2022
 |[https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/snowfl.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 |✔ qbt 4.3.x / python 3.8.5 <br />**READ REPOSITORY NOTES**
-|-
 |-
 |[[https://raw.githubusercontent.com/nklido/qBittorrent_search_engines/master/engines/solidtorrents_icon_16x16.png]] [https://solidtorrents.net Solid Torrents]
 |[https://github.com/nklido/qBittorrent_search_engines nKlido]
@@ -310,12 +330,33 @@ Mejor Torrent]
 | [https://raw.githubusercontent.com/libellula/qbt-plugins/main/sukebei.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | ✔ qbt 4.0.x / python 3.5.0 <br />✖ qbt 4.1.3 (intermittent failure)
 |-
+| [[https://github.com/LightDestory/qBittorrent-Search-Plugins/raw/master/src/engines/thepiratebay.png]] [https://thepiratebay.org/  ThePirateBay]
+| [https://github.com/LightDestory/qBittorrent-Search-Plugins LightDestory]
+| 1.0
+| 13/Nov<br />2021
+| [https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/thepiratebay.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
+| ✔ qbt 4.3.x / python 3.8.5
+|-
+| [[https://github.com/LightDestory/qBittorrent-Search-Plugins/raw/master/src/engines/tntvillagedump.png]] [http://tntvillage.org/  TNTVillageDump]
+| [https://github.com/LightDestory/qBittorrent-Search-Plugins LightDestory]
+| 1.1
+| 31/Jan<br />2022
+| [https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/tntvilagedump.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
+| ✔ qbt 4.3.x / python 3.8.5
+|-
 | [[https://raw.githubusercontent.com/BrunoReX/qBittorrent-Search-Plugin-TokyoToshokan/master/tokyotoshokan.png]] [https://tokyotosho.info/index.php Tokyo Toshokan]
 | [https://github.com/BrunoReX/qBittorrent-Search-Plugin-TokyoToshokan BrunoReX]
 | 2.3
 | 18/Mar<br />2018
 | [https://raw.githubusercontent.com/BrunoReX/qBittorrent-Search-Plugin-TokyoToshokan/master/tokyotoshokan.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | ✔ qbt 4.0.x / python 3.5.0
+|-
+| [[https://github.com/LightDestory/qBittorrent-Search-Plugins/raw/master/src/engines/torrentdownload.png]] [https://torrentdownload.info/  TorrentDownload]
+| [https://github.com/LightDestory/qBittorrent-Search-Plugins LightDestory]
+| 1.0
+| 28/Jul<br />2022
+| [https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/torrentdownload.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
+| ✔ qbt 4.3.x / python 3.8.5
 |-
 | [[https://github.com/libellula/Official-search-engines-plugins-favicons/blob/main/favicon-16x16.png]] [https://www.torrentfunk.com/ TorrentFunk]
 | [https://github.com/MaurizioRicci/qBittorrent_search_engine/ mauricci]
