Updated Unofficial search plugins (mediawiki)

--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -337,7 +337,7 @@ Mejor Torrent]
 | [https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/thepiratebay.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | ✔ qbt 4.3.x / python 3.8.5
 |-
-| [[http://scare.ca/dl/qBittorrent/thepiratebay.png]] [https://thepiratebay.org/  ThePirateBay with categories]
+| [[https://github.com/LightDestory/qBittorrent-Search-Plugins/raw/master/src/engines/thepiratebay.png]] [https://thepiratebay.org/  ThePirateBay with categories]
 | [http://scare.ca/dl/qBittorrent Scare!]
 | 2.0
 | 1/Sep<br />2022
